- Fixed registration; - Updated login logic: removed status from response; - Added new endpoint: GET : '/users/me/status'
